Change api and enhance new features
